030-software/fluxcd/apps/comics/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: comics
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: comics
  template:
    metadata:
      labels:
        app: comics
        policy.gatekeeper.sh/ignore-psp-volume-types: "true"
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    app: comics
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: comics
      containers:
        - name: comics
          image: busybox:1.38@sha256:fd7dc98638c8e305f4dc34e979f1c0fdfdcaeb0fbf8fcff77ae834b6da3d7e6e
          args: ["busybox", "httpd", "-f", "-v", "-p", "8080"]
          workingDir: /assets
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          startupProbe:
            tcpSocket:
              port: http
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            httpGet:
              port: http
              path: /
          resources:
            requests:
              cpu: 100m
            limits:
              memory: 64Mi
          volumeMounts:
            - name: assets
              mountPath: /assets
      volumes:
        - name: assets
          image:
            reference: shokohsc/ouistity:d282bb5@sha256:c41e4ac8eb15c7d527546343c3cb53138359902a6e6240eb979d707af200e350
