030-software/fluxcd/apps/comics/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: comics
  labels:
    app: comics
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: comics
