030-software/fluxcd/apps/comics/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: comics
spec:
  hostnames:
  - comics.${domain}
  parentRefs:
  - name: cilium
    namespace: cilium
  rules:
  - backendRefs:
    - name: comics
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
